@@ -138,202 +138,200 @@ public class OrganizationRepositoryUtil {
             throws DataProcessingException {
         Long organizationUid ;
         long oldOrgUid = organizationContainer.getTheOrganizationDto().getOrganizationUid();
-        try {
-            String localUid ;
-            var localIdModel = odseIdGeneratorService.getValidLocalUid(LocalIdClass.ORGANIZATION, true);
-            organizationUid = localIdModel.getGaTypeUid().getSeedValueNbr();
-            localUid = localIdModel.getClassTypeUid().getUidPrefixCd() + localIdModel.getClassTypeUid().getSeedValueNbr() + localIdModel.getClassTypeUid().getUidSuffixCd();
+        String localUid ;
+        var localIdModel = odseIdGeneratorService.getValidLocalUid(LocalIdClass.ORGANIZATION, true);
+        organizationUid = localIdModel.getGaTypeUid().getSeedValueNbr();
+        localUid = localIdModel.getClassTypeUid().getUidPrefixCd() + localIdModel.getClassTypeUid().getSeedValueNbr() + localIdModel.getClassTypeUid().getUidSuffixCd();
 
-            if (organizationContainer.getTheOrganizationDto().getLocalId() == null || organizationContainer.getTheOrganizationDto().getLocalId().trim().length() == 0) {
-                organizationContainer.getTheOrganizationDto().setLocalId(localUid);
-            }
-            /**
-             * Starts inserting a new organization
-             */
-            if (organizationContainer != null) {
-                try {
-                    // Upper stream require this id to not mutated (must be negative), so falseToNew Method can parse the id correctly
-                    organizationContainer.getTheOrganizationDto().setOrganizationUid(organizationUid);
-                    organizationContainer.getTheOrganizationDto().setLocalId(localUid);
-                    organizationContainer.getTheOrganizationDto().setVersionCtrlNbr(1);
-                    insertOrganization(organizationContainer);
-                } catch (Exception e) {
-                    throw new DataProcessingException(e.getMessage(), e);
-                }
-
-            }
-            if (organizationContainer.getTheOrganizationNameDtoCollection() != null && !organizationContainer.getTheOrganizationNameDtoCollection().isEmpty()) {
-                insertOrganizationNames(organizationContainer);
-            }
-            //NOTE: Upsert EntityID
-            if (organizationContainer.getTheEntityIdDtoCollection() != null && !organizationContainer.getTheEntityIdDtoCollection().isEmpty()) {
-                createEntityId(organizationContainer);
-            }
-            //NOTE: Create Entity Locator Participation
-            if (organizationContainer.getTheEntityLocatorParticipationDtoCollection() != null && !organizationContainer.getTheEntityLocatorParticipationDtoCollection().isEmpty()) {
-                createEntityLocatorParticipation(organizationContainer);
-            }
-            //NOTE: Create Role
-            if (organizationContainer.getTheRoleDTCollection() != null && !organizationContainer.getTheRoleDTCollection().isEmpty()) {
-                createRole(organizationContainer);
-            }
-
-            organizationContainer.getTheOrganizationDto().setOrganizationUid(oldOrgUid);
-
-        } catch (Exception ex) {
-            logger.error("Error while creating Organization {}", ex.getMessage());
-            throw new DataProcessingException(ex.getMessage(), ex);
+        if (organizationContainer.getTheOrganizationDto().getLocalId() == null || organizationContainer.getTheOrganizationDto().getLocalId().trim().isEmpty()) {
+            organizationContainer.getTheOrganizationDto().setLocalId(localUid);
         }
+        /**
+         * Starts inserting a new organization
+         */
+
+        EntityODSE entityModel = new EntityODSE();
+        entityModel.setEntityUid(organizationUid);
+        entityModel.setClassCd(ORG);
+        //// New code
+        List<EntityId> entityIdList = null;
+        List<Role> roleList = null;
+        //NOTE: Upsert EntityID
+        if (organizationContainer.getTheEntityIdDtoCollection() != null && !organizationContainer.getTheEntityIdDtoCollection().isEmpty()) {
+            entityIdList = createEntityId(organizationContainer, organizationUid);
+        }
+        //NOTE: Create Role
+        if (organizationContainer.getTheRoleDTCollection() != null && !organizationContainer.getTheRoleDTCollection().isEmpty()) {
+            roleList = createRole(organizationContainer);
+        }
+
+        entityModel.setEntityIds(entityIdList);
+        entityModel.setRoles(roleList);
+        entityRepository.save(entityModel);
+
+
+
+        organizationContainer.getTheOrganizationDto().setCd(entityModel.getClassCd());
+        // Upper stream require this id to not mutated (must be negative), so falseToNew Method can parse the id correctly
+        organizationContainer.getTheOrganizationDto().setOrganizationUid(organizationUid);
+        organizationContainer.getTheOrganizationDto().setLocalId(localUid);
+        organizationContainer.getTheOrganizationDto().setVersionCtrlNbr(1);
+        var orgDomain = insertOrganization(organizationContainer);
+        organizationContainer.getTheOrganizationDto().setItNew(false);
+        organizationContainer.getTheOrganizationDto().setItDirty(false);
+
+        if (organizationContainer.getTheOrganizationNameDtoCollection() != null && !organizationContainer.getTheOrganizationNameDtoCollection().isEmpty()) {
+            orgDomain.setOrganizationNames(insertOrganizationNames(organizationContainer));
+        }
+
+        organizationRepository.save(orgDomain);
+
+        //NOTE: Create Entity Locator Participation
+        if (organizationContainer.getTheEntityLocatorParticipationDtoCollection() != null && !organizationContainer.getTheEntityLocatorParticipationDtoCollection().isEmpty()) {
+            createEntityLocatorParticipation(organizationContainer);
+        }
+
+
+        organizationContainer.getTheOrganizationDto().setOrganizationUid(oldOrgUid);
+
         return organizationUid;
     }
 
     @Transactional
     public void updateOrganization(OrganizationContainer organizationContainer)
             throws DataProcessingException {
-        try {
-            /**
-             * Starts inserting a new organization
-             */
-            if (organizationContainer == null) {
-                throw new DataProcessingException("Organization Container Is Null");
-            }
-            insertOrganization(organizationContainer);
-
-            if (organizationContainer.getTheOrganizationNameDtoCollection() != null && !organizationContainer.getTheOrganizationNameDtoCollection().isEmpty()) {
-                insertOrganizationNames(organizationContainer);
-            }
-            //NOTE: Upsert EntityID
-            if (organizationContainer.getTheEntityIdDtoCollection() != null && !organizationContainer.getTheEntityIdDtoCollection().isEmpty()) {
-                createEntityId(organizationContainer);
-            }
-            //NOTE: Create Entity Locator Participation
-            if (organizationContainer.getTheEntityLocatorParticipationDtoCollection() != null && !organizationContainer.getTheEntityLocatorParticipationDtoCollection().isEmpty()) {
-                createEntityLocatorParticipation(organizationContainer);
-            }
-            //NOTE: Create Role
-            if (organizationContainer.getTheRoleDTCollection() != null && !organizationContainer.getTheRoleDTCollection().isEmpty()) {
-                createRole(organizationContainer);
-            }
-
-        } catch (Exception ex) {
-            logger.error("Error while creating Organization {}", ex.getMessage());
-            throw new DataProcessingException(ex.getMessage(), ex);
+        /**
+         * Starts inserting a new organization
+         */
+        if (organizationContainer == null) {
+            throw new DataProcessingException("Organization Container Is Null");
         }
+
+        EntityODSE entityModel = new EntityODSE();
+        entityModel.setEntityUid(organizationContainer.getTheOrganizationDto().getOrganizationUid());
+        entityModel.setClassCd(ORG);
+        //// New code
+        List<EntityId> entityIdList = null;
+        List<Role> roleList = null;
+        if (organizationContainer.getTheEntityIdDtoCollection() != null && !organizationContainer.getTheEntityIdDtoCollection().isEmpty()) {
+            entityIdList = createEntityId(organizationContainer, organizationContainer.getTheOrganizationDto().getOrganizationUid());
+        }
+        if (organizationContainer.getTheRoleDTCollection() != null && !organizationContainer.getTheRoleDTCollection().isEmpty()) {
+            roleList = createRole(organizationContainer);
+        }
+        entityModel.setEntityIds(entityIdList);
+        entityModel.setRoles(roleList);
+        entityRepository.save(entityModel);
+
+
+        organizationContainer.getTheOrganizationDto().setCd(entityModel.getClassCd());
+        var orgDomain = insertOrganization(organizationContainer);
+
+        organizationContainer.getTheOrganizationDto().setItNew(false);
+        organizationContainer.getTheOrganizationDto().setItDirty(false);
+
+        if (organizationContainer.getTheOrganizationNameDtoCollection() != null && !organizationContainer.getTheOrganizationNameDtoCollection().isEmpty()) {
+            orgDomain.setOrganizationNames(insertOrganizationNames(organizationContainer));
+        }
+
+        organizationRepository.save(orgDomain);
+
+        //NOTE: Create Entity Locator Participation
+        if (organizationContainer.getTheEntityLocatorParticipationDtoCollection() != null && !organizationContainer.getTheEntityLocatorParticipationDtoCollection().isEmpty()) {
+            createEntityLocatorParticipation(organizationContainer);
+        }
+
+
     }
 
-    private Long insertOrganization(OrganizationContainer organizationContainer) throws DataProcessingException {
+    private Organization insertOrganization(OrganizationContainer organizationContainer) throws DataProcessingException {
         OrganizationDto organizationDto = organizationContainer.getTheOrganizationDto();
-        Long organizationUid;
-        try {
-            /**
-             * Inserts into entity table for organization
-             */
+        Organization organization = new Organization(organizationDto);
 
-            organizationUid = organizationDto.getOrganizationUid();
-            EntityODSE entityModel = new EntityODSE();
-            entityModel.setEntityUid(organizationUid);
-            entityModel.setClassCd(ORG);
-            //// New code
-            entityRepository.save(entityModel);
-            organizationDto.setCd(entityModel.getClassCd());
-
-            Organization organization = new Organization(organizationDto);
-            organizationRepository.save(organization);
-            organizationDto.setItNew(false);
-            organizationDto.setItDirty(false);
-        } catch (Exception e) {
-            throw new DataProcessingException(e.getMessage(), e);
-        }
-        return organizationUid;
+        return organization;
     }
 
-    private void insertOrganizationNames(OrganizationContainer organizationContainer)
+    private  List<OrganizationName>  insertOrganizationNames(OrganizationContainer organizationContainer)
             throws DataProcessingException {
         logger.debug("insertOrganizationNames(long organizationUID, Collection<Object>  organizationNames)");
         Iterator<OrganizationNameDto> anIterator;
-        try {
-            long organizationUID = organizationContainer.getTheOrganizationDto().getOrganizationUid();
-            Collection<OrganizationNameDto> organizationNames = organizationContainer.getTheOrganizationNameDtoCollection();
-            /**
-             * Inserts Organization names
-             */
-            anIterator = organizationNames.iterator();
-            while (anIterator.hasNext()) {
-                OrganizationNameDto orgNameDT = anIterator.next();
+        long organizationUID = organizationContainer.getTheOrganizationDto().getOrganizationUid();
+        Collection<OrganizationNameDto> organizationNames = organizationContainer.getTheOrganizationNameDtoCollection();
+        List<OrganizationName> domainList = new ArrayList<>();
+        /**
+         * Inserts Organization names
+         */
+        anIterator = organizationNames.iterator();
+        while (anIterator.hasNext()) {
+            OrganizationNameDto orgNameDT = anIterator.next();
 
-                if (orgNameDT.getOrganizationNameSeq() == null)
-                {
-                    orgNameDT.setOrganizationNameSeq(3);
-                }
-
-                orgNameDT.setOrganizationUid(organizationUID);
-                OrganizationName orgName = new OrganizationName(orgNameDT);
-                // Save Organization Name records
-                organizationNameRepository.save(orgName);
-
-                orgNameDT.setOrganizationUid(organizationUID);
-                orgNameDT.setItNew(false);
-                orgNameDT.setItDirty(false);
+            if (orgNameDT.getOrganizationNameSeq() == null)
+            {
+                orgNameDT.setOrganizationNameSeq(3);
             }
-        } catch (Exception ex) {
-            logger.error(" Exception while inserting Organization names into ORGINIZATION_NAME_TABLE: {}", ex.getMessage());
-            throw new DataProcessingException(ex.getMessage(), ex);
+
+            orgNameDT.setOrganizationUid(organizationUID);
+            OrganizationName orgName = new OrganizationName(orgNameDT);
+            // Save Organization Name records
+            domainList.add(orgName);
+
+            orgNameDT.setOrganizationUid(organizationUID);
+            orgNameDT.setItNew(false);
+            orgNameDT.setItDirty(false);
         }
         logger.debug("OrganizationRepositoryUtil - Done inserting all Organization names");
+
+        return domainList;
     }//end of inserting Organization names
 
-    private void createEntityId(OrganizationContainer organizationContainer) throws DataProcessingException {
+    private List<EntityId> createEntityId(OrganizationContainer organizationContainer, Long uid) throws DataProcessingException {
         ArrayList<EntityIdDto> entityList = (ArrayList<EntityIdDto>) organizationContainer.getTheEntityIdDtoCollection();
-        try {
-            Long pUid = organizationContainer.getTheOrganizationDto().getOrganizationUid();
-            for (EntityIdDto entityIdDto : entityList) {
-                entityIdDto.setEntityUid(pUid);
-                entityIdRepository.save(new EntityId(entityIdDto, tz));
-            }
-        } catch (Exception e) {
-            throw new DataProcessingException(e.getMessage(), e);
+
+        Long pUid = organizationContainer.getTheOrganizationDto().getOrganizationUid();
+        if (pUid <= 0) {
+            pUid = uid;
         }
+        List<EntityId> domainList = new ArrayList<>();
+        for (EntityIdDto entityIdDto : entityList) {
+            entityIdDto.setEntityUid(pUid);
+            domainList.add(new EntityId(entityIdDto, tz));
+        }
+        return domainList;
     }
 
     private void createEntityLocatorParticipation(OrganizationContainer ovo) throws DataProcessingException {
         ArrayList<EntityLocatorParticipationDto> entityLocatorList = (ArrayList<EntityLocatorParticipationDto>) ovo.getTheEntityLocatorParticipationDtoCollection();
-        try {
-            for (EntityLocatorParticipationDto entityLocatorDT : entityLocatorList) {
-                var localUid = odseIdGeneratorService.getValidLocalUid(LocalIdClass.ORGANIZATION, true);
-                if (entityLocatorDT.getClassCd().equals(NEDSSConstant.PHYSICAL) && entityLocatorDT.getThePhysicalLocatorDto() != null) {
-                    entityLocatorDT.getThePhysicalLocatorDto().setPhysicalLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-                    physicalLocatorRepository.save(new PhysicalLocator(entityLocatorDT.getThePhysicalLocatorDto()));
-                }
-                if (entityLocatorDT.getClassCd().equals(NEDSSConstant.POSTAL) && entityLocatorDT.getThePostalLocatorDto() != null) {
-                    entityLocatorDT.getThePostalLocatorDto().setPostalLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-                    postalLocatorRepository.save(new PostalLocator(entityLocatorDT.getThePostalLocatorDto()));
-                }
-                if (entityLocatorDT.getClassCd().equals(NEDSSConstant.TELE) && entityLocatorDT.getTheTeleLocatorDto() != null) {
-                    entityLocatorDT.getTheTeleLocatorDto().setTeleLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-                    teleLocatorRepository.save(new TeleLocator(entityLocatorDT.getTheTeleLocatorDto()));
-                }
-                entityLocatorDT.setEntityUid(ovo.getTheOrganizationDto().getOrganizationUid());
-                entityLocatorDT.setLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
-
-                if (entityLocatorDT.getVersionCtrlNbr() == null) {
-                    entityLocatorDT.setVersionCtrlNbr(1);
-                }
-                entityLocatorParticipationRepository.save(new EntityLocatorParticipation(entityLocatorDT, tz));
+        for (EntityLocatorParticipationDto entityLocatorDT : entityLocatorList) {
+            var localUid = odseIdGeneratorService.getValidLocalUid(LocalIdClass.ORGANIZATION, true);
+            if (entityLocatorDT.getClassCd().equals(NEDSSConstant.PHYSICAL) && entityLocatorDT.getThePhysicalLocatorDto() != null) {
+                entityLocatorDT.getThePhysicalLocatorDto().setPhysicalLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
+                physicalLocatorRepository.save(new PhysicalLocator(entityLocatorDT.getThePhysicalLocatorDto()));
             }
-        } catch (Exception e) {
-            throw new DataProcessingException(e.getMessage(), e);
+            if (entityLocatorDT.getClassCd().equals(NEDSSConstant.POSTAL) && entityLocatorDT.getThePostalLocatorDto() != null) {
+                entityLocatorDT.getThePostalLocatorDto().setPostalLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
+                postalLocatorRepository.save(new PostalLocator(entityLocatorDT.getThePostalLocatorDto()));
+            }
+            if (entityLocatorDT.getClassCd().equals(NEDSSConstant.TELE) && entityLocatorDT.getTheTeleLocatorDto() != null) {
+                entityLocatorDT.getTheTeleLocatorDto().setTeleLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
+                teleLocatorRepository.save(new TeleLocator(entityLocatorDT.getTheTeleLocatorDto()));
+            }
+            entityLocatorDT.setEntityUid(ovo.getTheOrganizationDto().getOrganizationUid());
+            entityLocatorDT.setLocatorUid(localUid.getGaTypeUid().getSeedValueNbr());
+
+            if (entityLocatorDT.getVersionCtrlNbr() == null) {
+                entityLocatorDT.setVersionCtrlNbr(1);
+            }
+            entityLocatorParticipationRepository.save(new EntityLocatorParticipation(entityLocatorDT, tz));
         }
     }
 
-    private void createRole(OrganizationContainer ovo) throws DataProcessingException {
+    private List<Role> createRole(OrganizationContainer ovo) throws DataProcessingException {
         ArrayList<RoleDto> roleList = (ArrayList<RoleDto>) ovo.getTheRoleDTCollection();
-        try {
-            for (RoleDto obj : roleList) {
-                roleRepository.save(new Role(obj));
-            }
-        } catch (Exception e) {
-            throw new DataProcessingException(e.getMessage(), e);
+        List<Role> domainList = new ArrayList<>();
+        for (RoleDto obj : roleList) {
+            domainList.add(new Role(obj));
         }
+        return domainList;
     }
 
     /**
@@ -348,81 +346,71 @@ public class OrganizationRepositoryUtil {
                                 String businessTriggerCd)
             throws DataProcessingException {
         Long organizationUID;
-        try {
-            organizationUID = setOrganizationInternal(organizationContainer, businessTriggerCd);
-        } catch (Exception e) {
-            logger.error("OrganizationRepositoryUtil.setOrganization: Exception: {}", e.getMessage());
-            throw new DataProcessingException(e.getMessage(), e);
-        }
+        organizationUID = setOrganizationInternal(organizationContainer, businessTriggerCd);
+
         return organizationUID;
     }
     @SuppressWarnings("java:S3776")
     @Transactional
     public Long setOrganizationInternal(OrganizationContainer organizationContainer, String businessTriggerCd) throws DataProcessingException {
         Long organizationUID;
-        try {
-            logger.debug("\n\n Inside set");
-            if (!organizationContainer.isItNew() && !organizationContainer.isItDirty()) {
-                return organizationContainer.getTheOrganizationDto()
-                        .getOrganizationUid();
-            } else {
-                Integer existVer = null;
-                if (organizationContainer.getTheOrganizationDto().getOrganizationUid() > 0) {
-                    var existObs = loadObject(organizationContainer.getTheOrganizationDto().getOrganizationUid(), null);
-                    if (existObs != null && existObs.getTheOrganizationDto() != null) {
-                        existVer = existObs.getTheOrganizationDto().getVersionCtrlNbr();
-                    }
-                }
-                OrganizationDto newOrganizationDto = (OrganizationDto) prepareAssocModelHelper
-                        .prepareVO(organizationContainer.getTheOrganizationDto(),
-                                "ORGANIZATION", businessTriggerCd,
-                                "ORGANIZATION",
-                                NEDSSConstant.BASE,
-                                existVer
-                        );
-                organizationContainer.setTheOrganizationDto(newOrganizationDto);
-
-                prepareVO(organizationContainer.getTheOrganizationDto(), businessTriggerCd,
-                        DataTables.ORGANIZATION_TABLE, NEDSSConstant.BASE);
-
-                Collection<EntityLocatorParticipationDto> elpDTCol = organizationContainer
-                        .getTheEntityLocatorParticipationDtoCollection();
-                Collection<RoleDto> rDTCol = organizationContainer
-                        .getTheRoleDTCollection();
-                Collection<ParticipationDto> pDTCol = organizationContainer
-                        .getTheParticipationDtoCollection();
-                //Collection<EntityLocatorParticipationDto> col = null;
-                if (elpDTCol != null) {
-                    Collection<EntityLocatorParticipationDto> col = entityHelper.iterateELPDTForEntityLocatorParticipation(elpDTCol);
-                    organizationContainer
-                            .setTheEntityLocatorParticipationDtoCollection(col);
-                }
-                if (rDTCol != null) {
-                    Collection<RoleDto> col = entityHelper.iterateRDT(rDTCol);
-                    organizationContainer.setTheRoleDTCollection(col);
-                }
-                if (pDTCol != null) {
-                    Collection<ParticipationDto> col = entityHelper.iteratePDTForParticipation(pDTCol);
-                    organizationContainer.setTheParticipationDtoCollection(col);
-                }
-                /* Call the function to persist the OrganizationName */
-
-                this.prepareOrganizationNameBeforePersistence(organizationContainer);
-
-                if (organizationContainer.isItNew()) {
-                    organizationUID = this.createOrganization(organizationContainer);
-                    logger.debug(" OrganizationRepositoryUtil.setOrganization -  Organization Created");
-                    logger.debug("OrganizationRepositoryUtil.setOrganization {}", organizationUID);
-                } else {
-                    this.updateOrganization(organizationContainer);
-                    organizationUID = organizationContainer
-                            .getTheOrganizationDto().getOrganizationUid();
-                    logger.debug(" OrganizationRepositoryUtil.setOrganizationInternal -  Organization Updated");
+        if (!organizationContainer.isItNew() && !organizationContainer.isItDirty()) {
+            return organizationContainer.getTheOrganizationDto()
+                    .getOrganizationUid();
+        } else {
+            Integer existVer = null;
+            if (organizationContainer.getTheOrganizationDto().getOrganizationUid() > 0) {
+                var existObs = loadObject(organizationContainer.getTheOrganizationDto().getOrganizationUid(), null);
+                if (existObs != null && existObs.getTheOrganizationDto() != null) {
+                    existVer = existObs.getTheOrganizationDto().getVersionCtrlNbr();
                 }
             }
-        } catch (Exception e) {
-            throw new DataProcessingException(e.getMessage(), e);
+            OrganizationDto newOrganizationDto = (OrganizationDto) prepareAssocModelHelper
+                    .prepareVO(organizationContainer.getTheOrganizationDto(),
+                            "ORGANIZATION", businessTriggerCd,
+                            "ORGANIZATION",
+                            NEDSSConstant.BASE,
+                            existVer
+                    );
+            organizationContainer.setTheOrganizationDto(newOrganizationDto);
 
+            prepareVO(organizationContainer.getTheOrganizationDto(), businessTriggerCd,
+                    DataTables.ORGANIZATION_TABLE, NEDSSConstant.BASE);
+
+            Collection<EntityLocatorParticipationDto> elpDTCol = organizationContainer
+                    .getTheEntityLocatorParticipationDtoCollection();
+            Collection<RoleDto> rDTCol = organizationContainer
+                    .getTheRoleDTCollection();
+            Collection<ParticipationDto> pDTCol = organizationContainer
+                    .getTheParticipationDtoCollection();
+            //Collection<EntityLocatorParticipationDto> col = null;
+            if (elpDTCol != null) {
+                Collection<EntityLocatorParticipationDto> col = entityHelper.iterateELPDTForEntityLocatorParticipation(elpDTCol);
+                organizationContainer
+                        .setTheEntityLocatorParticipationDtoCollection(col);
+            }
+            if (rDTCol != null) {
+                Collection<RoleDto> col = entityHelper.iterateRDT(rDTCol);
+                organizationContainer.setTheRoleDTCollection(col);
+            }
+            if (pDTCol != null) {
+                Collection<ParticipationDto> col = entityHelper.iteratePDTForParticipation(pDTCol);
+                organizationContainer.setTheParticipationDtoCollection(col);
+            }
+            /* Call the function to persist the OrganizationName */
+
+            this.prepareOrganizationNameBeforePersistence(organizationContainer);
+
+            if (organizationContainer.isItNew()) {
+                organizationUID = this.createOrganization(organizationContainer);
+                logger.debug(" OrganizationRepositoryUtil.setOrganization -  Organization Created");
+                logger.debug("OrganizationRepositoryUtil.setOrganization {}", organizationUID);
+            } else {
+                this.updateOrganization(organizationContainer);
+                organizationUID = organizationContainer
+                        .getTheOrganizationDto().getOrganizationUid();
+                logger.debug(" OrganizationRepositoryUtil.setOrganizationInternal -  Organization Updated");
+            }
         }
 
         logger.debug("EntityControllerEJB.setOrganization - ouid  =  {}", organizationUID);
@@ -431,30 +419,25 @@ public class OrganizationRepositoryUtil {
 
     private void prepareOrganizationNameBeforePersistence(
             OrganizationContainer organizationContainer) throws DataProcessingException {
-        try {
-            Collection<OrganizationNameDto> namesCollection;
-            Iterator<OrganizationNameDto> anIterator;
-            String selectedName = null;
-            namesCollection = organizationContainer.getTheOrganizationNameDtoCollection();
-            if (namesCollection != null) {
-                try {
-                    for (anIterator = namesCollection.iterator(); anIterator
-                            .hasNext(); ) {
-                        OrganizationNameDto organizationNameDto = anIterator
-                                .next();
-                        if (organizationNameDto.getNmUseCd().equals("L")) {
-                            selectedName = organizationNameDto.getNmTxt();
-                            organizationContainer.getTheOrganizationDto().setDisplayNm(
-                                    selectedName);
-                        }
+        Collection<OrganizationNameDto> namesCollection;
+        Iterator<OrganizationNameDto> anIterator;
+        String selectedName = null;
+        namesCollection = organizationContainer.getTheOrganizationNameDtoCollection();
+        if (namesCollection != null) {
+            try {
+                for (anIterator = namesCollection.iterator(); anIterator
+                        .hasNext(); ) {
+                    OrganizationNameDto organizationNameDto = anIterator
+                            .next();
+                    if (organizationNameDto.getNmUseCd().equals("L")) {
+                        selectedName = organizationNameDto.getNmTxt();
+                        organizationContainer.getTheOrganizationDto().setDisplayNm(
+                                selectedName);
                     }
-                } catch (Exception e) {
-                    logger.error("Exception setting the Organization Name: {}", selectedName);
                 }
+            } catch (Exception e) {
+                logger.error("Exception setting the Organization Name: {}", selectedName);
             }
-        } catch (Exception e) {
-            logger.error("prepareOrganizationNameBeforePersistence: {}", e.getMessage());
-            throw new DataProcessingException(e.getMessage(), e);
         }
     }
 
@@ -473,14 +456,15 @@ public class OrganizationRepositoryUtil {
          *  Selects OrganizationDto object
          */
 
-        OrganizationDto pDT = selectOrganization(organizationUID);
+        var org = organizationRepository.findById(organizationUID);
+        OrganizationDto pDT = selectOrganization(org.get());
         ovo.setTheOrganizationDto(pDT);
 
         /**
          * Selects OrganizationNameDto Collection
          */
 
-        Collection<OrganizationNameDto> pnColl = selectOrganizationNames(organizationUID);
+        Collection<OrganizationNameDto> pnColl = selectOrganizationNames(org.get().getOrganizationNames());
         ovo.setTheOrganizationNameDtoCollection(pnColl);
 
         /**
@@ -512,20 +496,14 @@ public class OrganizationRepositoryUtil {
         return ovo;
     }
 
-    @Transactional
-    public OrganizationDto selectOrganization(long organizationUID) throws DataProcessingException {
+    protected OrganizationDto selectOrganization(Organization organization) throws DataProcessingException {
         OrganizationDto organizationDto;
         /**
          * Selects organization from organization table
          */
-        try {
-            Organization organizatioModel = this.findOrganizationByUid(organizationUID);
-            organizationDto = new OrganizationDto(organizatioModel);
-            organizationDto.setItNew(false);
-            organizationDto.setItDirty(false);
-        } catch (Exception ex) {
-            throw new DataProcessingException(ex.getMessage(), ex);
-        }
+        organizationDto = new OrganizationDto(organization);
+        organizationDto.setItNew(false);
+        organizationDto.setItDirty(false);
         logger.debug("return organization object");
         return organizationDto;
     }//end of selecting organization ethnic groups
@@ -533,142 +511,119 @@ public class OrganizationRepositoryUtil {
     /**
      * Selects the  Names of the Organization
      */
-    private Collection<OrganizationNameDto> selectOrganizationNames(long organizationUID) throws DataProcessingException {
+    private Collection<OrganizationNameDto> selectOrganizationNames(List<OrganizationName> organizationNames) throws DataProcessingException {
         Collection<OrganizationNameDto> returnArrayList = new ArrayList<>();
-        try {
-            Optional<List<OrganizationName>> listOptional = organizationNameRepository.findByOrganizationUid(organizationUID);
-            List<OrganizationName> organizationNameList = new ArrayList<>();
-            if(listOptional.isPresent()) {
-                organizationNameList = listOptional.get();
-            }
-            for (OrganizationName organizationNameModel : organizationNameList) {
-                OrganizationNameDto organizationNameDto = new OrganizationNameDto(organizationNameModel, tz);
-                organizationNameDto.setItNew(false);
-                organizationNameDto.setItDirty(false);
-                returnArrayList.add(organizationNameDto);
-            }
-            return returnArrayList;
-        } catch (Exception ex) {
-            logger.error("Exception while selection " +
-                    "Organization names; uid = " + organizationUID, ex);
-            throw new DataProcessingException(ex.getMessage(), ex);
+        for (OrganizationName organizationNameModel : organizationNames) {
+            OrganizationNameDto organizationNameDto = new OrganizationNameDto(organizationNameModel, tz);
+            organizationNameDto.setItNew(false);
+            organizationNameDto.setItDirty(false);
+            returnArrayList.add(organizationNameDto);
         }
+        return returnArrayList;
     }
 
     /**
      * This method is used to retrieve entityID objects for a specific organization.
      **/
     private Collection<EntityIdDto> selectEntityIDs(long organizationUID) throws DataProcessingException {
-        try {
-            Optional<List<EntityId>> idListOptional = this.entityIdRepository.findByEntityUid(organizationUID);
-            List<EntityId> idList = new ArrayList<>();
-            if (idListOptional.isPresent()) {
-                idList = idListOptional.get();
-            }
-
-
-            Collection<EntityIdDto> entityIdList = new ArrayList<>();
-            for (EntityId entityId : idList) {
-                EntityIdDto entityIdDto = new EntityIdDto(entityId);
-                entityIdDto.setItNew(false);
-                entityIdDto.setItDirty(false);
-                entityIdList.add(entityIdDto);
-            }
-            logger.debug("Return entity id collection");
-            return entityIdList;
-        } catch (Exception ex) {
-            logger.error("Exception while selection " +
-                    "entity ids; uid = " + organizationUID, ex);
-            throw new DataProcessingException(ex.getMessage(), ex);
+        Optional<List<EntityId>> idListOptional = this.entityIdRepository.findByEntityUid(organizationUID);
+        List<EntityId> idList = new ArrayList<>();
+        if (idListOptional.isPresent()) {
+            idList = idListOptional.get();
         }
+
+
+        Collection<EntityIdDto> entityIdList = new ArrayList<>();
+        for (EntityId entityId : idList) {
+            EntityIdDto entityIdDto = new EntityIdDto(entityId);
+            entityIdDto.setItNew(false);
+            entityIdDto.setItDirty(false);
+            entityIdList.add(entityIdDto);
+        }
+        logger.debug("Return entity id collection");
+        return entityIdList;
     }
     @SuppressWarnings("java:S3776")
     private Collection<EntityLocatorParticipationDto> selectEntityLocatorParticipations(long organizationUID)
             throws DataProcessingException {
         Collection<EntityLocatorParticipationDto> entityLocatorParticipationList = new ArrayList<>();
-        try {
-            var res =  entityLocatorParticipationRepository.findByParentUid(organizationUID);
-            List<EntityLocatorParticipation> entityLocatorParticipations = new ArrayList<>();
-            if (res.isPresent()) {
-                entityLocatorParticipations = res.get();
-            }
+        var res =  entityLocatorParticipationRepository.findByParentUid(organizationUID);
+        List<EntityLocatorParticipation> entityLocatorParticipations = new ArrayList<>();
+        if (res.isPresent()) {
+            entityLocatorParticipations = res.get();
+        }
 
-            if (!entityLocatorParticipations.isEmpty()) {
-                List<EntityLocatorParticipation> physicalLocators;
-                List<EntityLocatorParticipation> postalLocators;
-                List<EntityLocatorParticipation> teleLocators;
+        if (!entityLocatorParticipations.isEmpty()) {
+            List<EntityLocatorParticipation> physicalLocators;
+            List<EntityLocatorParticipation> postalLocators;
+            List<EntityLocatorParticipation> teleLocators;
 
-                physicalLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
-                                .equalsIgnoreCase(NEDSSConstant.PHYSICAL))
-                        .collect(Collectors.toList());
-                postalLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
-                                .equalsIgnoreCase(NEDSSConstant.POSTAL))
-                        .collect(Collectors.toList());
-                teleLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
-                                .equalsIgnoreCase(NEDSSConstant.TELE))
-                        .collect(Collectors.toList());
+            physicalLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
+                            .equalsIgnoreCase(NEDSSConstant.PHYSICAL))
+                    .toList();
+            postalLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
+                            .equalsIgnoreCase(NEDSSConstant.POSTAL))
+                    .toList();
+            teleLocators = entityLocatorParticipations.stream().filter(x -> x.getClassCd()
+                            .equalsIgnoreCase(NEDSSConstant.TELE))
+                    .toList();
 
-                if (!physicalLocators.isEmpty()) {
-                    Optional<List<PhysicalLocator>> existingLocator = physicalLocatorRepository.findByPhysicalLocatorUids(
-                            physicalLocators.stream()
-                                    .map(EntityLocatorParticipation::getLocatorUid)
-                                    .collect(Collectors.toList()));
+            if (!physicalLocators.isEmpty()) {
+                Optional<List<PhysicalLocator>> existingLocator = physicalLocatorRepository.findByPhysicalLocatorUids(
+                        physicalLocators.stream()
+                                .map(EntityLocatorParticipation::getLocatorUid)
+                                .collect(Collectors.toList()));
 
-                    if (existingLocator.isPresent()) {
-                        List<PhysicalLocator> physicalLocatorList = existingLocator.get();
-                        for (PhysicalLocator physicalLocator : physicalLocatorList) {
-                            EntityLocatorParticipationDto entityLocatorVO = new EntityLocatorParticipationDto();
-                            entityLocatorVO.setItNew(false);
-                            entityLocatorVO.setItDirty(false);
-                            entityLocatorVO.setItDelete(false);
-                            PhysicalLocatorDto physicalLocatorDT = new PhysicalLocatorDto(physicalLocator);
-                            physicalLocatorDT.setImageTxt(null);
-                            entityLocatorVO.setThePhysicalLocatorDto(physicalLocatorDT);
-                            entityLocatorParticipationList.add(entityLocatorVO);
-                        }
-                    }
-                }
-                if (!postalLocators.isEmpty()) {
-                    var existingLocator = postalLocatorRepository.findByPostalLocatorUids(
-                            postalLocators.stream()
-                                    .map(EntityLocatorParticipation::getLocatorUid)
-                                    .collect(Collectors.toList()));
-                    if (existingLocator.isPresent()) {
-                        List<PostalLocator> postalLocatorList = existingLocator.get();
-                        for (PostalLocator postalLocator : postalLocatorList) {
-                            EntityLocatorParticipationDto entityLocatorVO = new EntityLocatorParticipationDto();
-                            entityLocatorVO.setItNew(false);
-                            entityLocatorVO.setItDirty(false);
-                            entityLocatorVO.setItDelete(false);
-                            PostalLocatorDto postalLocatorDT = new PostalLocatorDto(postalLocator);
-                            entityLocatorVO.setThePostalLocatorDto(postalLocatorDT);
-                            entityLocatorParticipationList.add(entityLocatorVO);
-                        }
-                    }
-                }
-                if (!teleLocators.isEmpty()) {
-                    var existingLocator = teleLocatorRepository.findByTeleLocatorUids(
-                            teleLocators.stream()
-                                    .map(EntityLocatorParticipation::getLocatorUid)
-                                    .collect(Collectors.toList()));
-                    if (existingLocator.isPresent()) {
-                        List<TeleLocator> teleLocatorList = existingLocator.get();
-                        for (TeleLocator teleLocator : teleLocatorList) {
-                            EntityLocatorParticipationDto entityLocatorVO = new EntityLocatorParticipationDto();
-                            entityLocatorVO.setItNew(false);
-                            entityLocatorVO.setItDirty(false);
-                            entityLocatorVO.setItDelete(false);
-                            TeleLocatorDto teleLocatorDto = new TeleLocatorDto(teleLocator);
-                            entityLocatorVO.setTheTeleLocatorDto(teleLocatorDto);
-                            entityLocatorParticipationList.add(entityLocatorVO);
-                        }
+                if (existingLocator.isPresent()) {
+                    List<PhysicalLocator> physicalLocatorList = existingLocator.get();
+                    for (PhysicalLocator physicalLocator : physicalLocatorList) {
+                        EntityLocatorParticipationDto entityLocatorVO = new EntityLocatorParticipationDto();
+                        entityLocatorVO.setItNew(false);
+                        entityLocatorVO.setItDirty(false);
+                        entityLocatorVO.setItDelete(false);
+                        PhysicalLocatorDto physicalLocatorDT = new PhysicalLocatorDto(physicalLocator);
+                        physicalLocatorDT.setImageTxt(null);
+                        entityLocatorVO.setThePhysicalLocatorDto(physicalLocatorDT);
+                        entityLocatorParticipationList.add(entityLocatorVO);
                     }
                 }
             }
-        } catch (Exception ex) {
-            logger.error("Exception selectEntityLocatorParticipations " +
-                    "entity id; uid = " + organizationUID, ex);
-            throw new DataProcessingException(ex.getMessage(), ex);
+            if (!postalLocators.isEmpty()) {
+                var existingLocator = postalLocatorRepository.findByPostalLocatorUids(
+                        postalLocators.stream()
+                                .map(EntityLocatorParticipation::getLocatorUid)
+                                .collect(Collectors.toList()));
+                if (existingLocator.isPresent()) {
+                    List<PostalLocator> postalLocatorList = existingLocator.get();
+                    for (PostalLocator postalLocator : postalLocatorList) {
+                        EntityLocatorParticipationDto entityLocatorVO = new EntityLocatorParticipationDto();
+                        entityLocatorVO.setItNew(false);
+                        entityLocatorVO.setItDirty(false);
+                        entityLocatorVO.setItDelete(false);
+                        PostalLocatorDto postalLocatorDT = new PostalLocatorDto(postalLocator);
+                        entityLocatorVO.setThePostalLocatorDto(postalLocatorDT);
+                        entityLocatorParticipationList.add(entityLocatorVO);
+                    }
+                }
+            }
+            if (!teleLocators.isEmpty()) {
+                var existingLocator = teleLocatorRepository.findByTeleLocatorUids(
+                        teleLocators.stream()
+                                .map(EntityLocatorParticipation::getLocatorUid)
+                                .collect(Collectors.toList()));
+                if (existingLocator.isPresent()) {
+                    List<TeleLocator> teleLocatorList = existingLocator.get();
+                    for (TeleLocator teleLocator : teleLocatorList) {
+                        EntityLocatorParticipationDto entityLocatorVO = new EntityLocatorParticipationDto();
+                        entityLocatorVO.setItNew(false);
+                        entityLocatorVO.setItDirty(false);
+                        entityLocatorVO.setItDelete(false);
+                        TeleLocatorDto teleLocatorDto = new TeleLocatorDto(teleLocator);
+                        entityLocatorVO.setTheTeleLocatorDto(teleLocatorDto);
+                        entityLocatorParticipationList.add(entityLocatorVO);
+                    }
+                }
+            }
         }
         return entityLocatorParticipationList;
     }
@@ -676,21 +631,16 @@ public class OrganizationRepositoryUtil {
 
     private Collection<RoleDto> selectRoleDTCollection(long uid) throws DataProcessingException {
         Collection<RoleDto> retval = new ArrayList<>();
-        try {
-            var res =  roleRepository.findBySubjectEntityUid(uid);
-            List<Role> roleList = new ArrayList<>();
-            if (res.isPresent()) {
-                roleList =res.get();
-            }
-            for (Role roleModel : roleList) {
-                RoleDto newdt = new RoleDto(roleModel);
-                newdt.setItNew(false);
-                newdt.setItDirty(false);
-                retval.add(newdt);
-            }
-        } catch (Exception se) {
-            logger.error("Error: selectRoleDTCollection while selecting role \n" + se.getMessage(), se);
-            throw new DataProcessingException(se.getMessage());
+        var res =  roleRepository.findBySubjectEntityUid(uid);
+        List<Role> roleList = new ArrayList<>();
+        if (res.isPresent()) {
+            roleList =res.get();
+        }
+        for (Role roleModel : roleList) {
+            RoleDto newdt = new RoleDto(roleModel);
+            newdt.setItNew(false);
+            newdt.setItDirty(false);
+            retval.add(newdt);
         }
         return retval;
     }
@@ -700,35 +650,29 @@ public class OrganizationRepositoryUtil {
      */
     private Collection<ParticipationDto> selectParticipationDTCollection(Long uid, Long act_uid)
             throws DataProcessingException {
-        try {
-            List<Participation> participationList = new ArrayList<>();
+        List<Participation> participationList = new ArrayList<>();
 
-            if (act_uid != null) {
-                var result = participationRepository.findBySubjectEntityUidAndActUid(uid, act_uid);
-                if (result.isPresent() && !result.get().isEmpty()) {
-                    participationList = result.get();
-                }
-            } else {
-                var result = participationRepository.findBySubjectEntityUid(uid);
-                if (result.isPresent() && !result.get().isEmpty()) {
-                    participationList = result.get();
-                }
+        if (act_uid != null) {
+            var result = participationRepository.findBySubjectEntityUidAndActUid(uid, act_uid);
+            if (result.isPresent() && !result.get().isEmpty()) {
+                participationList = result.get();
             }
-
-            ArrayList<ParticipationDto> retList = new ArrayList<>();
-
-            for (Participation participation : participationList) {
-                ParticipationDto participationDto = new ParticipationDto(participation);
-                participationDto.setItNew(false);
-                participationDto.setItDirty(false);
-                retList.add(participationDto);
+        } else {
+            var result = participationRepository.findBySubjectEntityUid(uid);
+            if (result.isPresent() && !result.get().isEmpty()) {
+                participationList = result.get();
             }
-            return retList;
-        } catch (Exception se) {
-            logger.error("Exception selectParticipation = " + se.getMessage(), se);
-            throw new DataProcessingException("Error: Exception while selecting \n" +
-                    se.getMessage());
         }
+
+        ArrayList<ParticipationDto> retList = new ArrayList<>();
+
+        for (Participation participation : participationList) {
+            ParticipationDto participationDto = new ParticipationDto(participation);
+            participationDto.setItNew(false);
+            participationDto.setItDirty(false);
+            retList.add(participationDto);
+        }
+        return retList;
     }
 
     /**
@@ -743,41 +687,31 @@ public class OrganizationRepositoryUtil {
      * @throws DataProcessingException
      */
     public OrganizationDto prepareVO(OrganizationDto organizationDto, String businessTriggerCd, String tableName, String moduleCd) throws DataProcessingException {
-        try {
-            if (!organizationDto.isItNew() && !organizationDto.isItDirty() && !organizationDto.isItDelete()) {
-                throw new DataProcessingException("Error while calling prepareVO method in PrepareVOUtils");
-            }
-            logger.debug("(Boolean.FALSE).equals(new Boolean(theRootDTInterface.tableName)?: {}:theRootDTInterface.moduleCd: {}:businessTriggerCd: {}",tableName, moduleCd, businessTriggerCd);
-
-            if (organizationDto.isItNew() || organizationDto.isItDirty()) {
-                long userId = AuthUtil.authUser.getNedssEntryId();
-                Timestamp time = TimeStampUtil.getCurrentTimeStamp(tz);
-                logger.debug("new entity");
-                PrepareEntity prepareEntity = this.getPrepareEntityForOrganization(businessTriggerCd, moduleCd, organizationDto.getOrganizationUid(), tableName);
-                organizationDto.setLocalId(prepareEntity.getLocalId());
-                organizationDto.setAddUserId(userId);
-                organizationDto.setAddTime(time);
-                organizationDto.setRecordStatusCd(prepareEntity.getRecordStatusState());
-                organizationDto.setStatusCd(prepareEntity.getObjectStatusState());
-                organizationDto.setRecordStatusTime(time);
-                organizationDto.setStatusTime(time);
-                organizationDto.setLastChgTime(time);
-                organizationDto.setLastChgUserId(userId);
-                organizationDto.setLastChgReasonCd(null);
-            }
-            return organizationDto;
-        } catch (Exception e) {
-            logger.error("Exception in PrepareVOUtils.prepareVO: LocalID: " + organizationDto.getLocalId() + ", businessTriggerCd: " + businessTriggerCd + ", tableName: " + tableName + ", " + e.getMessage(), e);
-            throw new DataProcessingException(e.getMessage(), e);
+        if (!organizationDto.isItNew() && !organizationDto.isItDirty() && !organizationDto.isItDelete()) {
+            throw new DataProcessingException("Error while calling prepareVO method in PrepareVOUtils");
         }
+        logger.debug("(Boolean.FALSE).equals(new Boolean(theRootDTInterface.tableName)?: {}:theRootDTInterface.moduleCd: {}:businessTriggerCd: {}",tableName, moduleCd, businessTriggerCd);
+
+        if (organizationDto.isItNew() || organizationDto.isItDirty()) {
+            long userId = AuthUtil.authUser.getNedssEntryId();
+            Timestamp time = TimeStampUtil.getCurrentTimeStamp(tz);
+            logger.debug("new entity");
+            PrepareEntity prepareEntity = this.getPrepareEntityForOrganization(businessTriggerCd, moduleCd, organizationDto.getOrganizationUid(), tableName);
+            organizationDto.setLocalId(prepareEntity.getLocalId());
+            organizationDto.setAddUserId(userId);
+            organizationDto.setAddTime(time);
+            organizationDto.setRecordStatusCd(prepareEntity.getRecordStatusState());
+            organizationDto.setStatusCd(prepareEntity.getObjectStatusState());
+            organizationDto.setRecordStatusTime(time);
+            organizationDto.setStatusTime(time);
+            organizationDto.setLastChgTime(time);
+            organizationDto.setLastChgUserId(userId);
+            organizationDto.setLastChgReasonCd(null);
+        }
+        return organizationDto;
     }
 
     public PrepareEntity getPrepareEntityForOrganization(String businessTriggerCd, String moduleCd, Long uid, String tableName) throws DataProcessingException {
-        try {
-            return prepareEntityStoredProcRepository.getPrepareEntity(businessTriggerCd, moduleCd, uid, tableName);
-        } catch (Exception ex) {
-            logger.error("Exception in getPrepareEntityForOrganization for businessTriggerCd={} moduleCd={} uid:{} tableName={}: ERROR = {}",businessTriggerCd,moduleCd, uid,tableName, ex.getMessage());
-            throw new DataProcessingException(ex.getMessage(), ex);
-        }
+        return prepareEntityStoredProcRepository.getPrepareEntity(businessTriggerCd, moduleCd, uid, tableName);
     }
 }
